# searxng-simple-mcp

./: .env.example  .gitignore  .rooignore  .roorules  Dockerfile  FastMCP_Documentation.md  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: docker-build-publish.yml  release-version.yml  test-lint.yml
.roo/: system-prompt-codeshort
scripts/: bump_version.py
src/: run_server.py
src/searxng_simple_mcp/: __init__.py  config.py  searxng_client.py  server.py
